--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "got": "^12.0.1",
